k3s/immich/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-server
  namespace: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-server
  template:
    metadata:
      labels:
        app: immich-server
    spec:
      nodeSelector:
        kubernetes.io/hostname: k3s-worker-2
      securityContext:
        runAsUser: 1000
        runAsGroup: 3004
        fsGroup: 3004
      containers:
        - name: immich-server
          image: ghcr.io/immich-app/immich-server:v3.1.0
          ports:
            - containerPort: 2283
          volumeMounts:
            - name: photos
              mountPath: /usr/src/app/upload
              subPath: upload
            - name: photos
              mountPath: /usr/src/app/external/originals
              subPath: originals
              readOnly: true
            - name: photos
              mountPath: /usr/src/app/external/_incoming
              subPath: _incomings
              readOnly: true
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 3000m
              memory: 6000Mi
          securityContext:
            allowPrivilegeEscalation: false
      volumes:
        - name: photos
          persistentVolumeClaim:
            claimName: immich-photos
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-machine-learning
  namespace: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-machine-learning
  template:
    metadata:
      labels:
        app: immich-machine-learning
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 3004
        fsGroup: 3004
      containers:
        - name: immich-machine-learning
          image: ghcr.io/immich-app/immich-machine-learning:v3.1.0
          ports:
            - containerPort: 3003
          volumeMounts:
            - name: model-cache
              mountPath: /cache
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              memory: 1024Mi
          securityContext:
            allowPrivilegeEscalation: false
      volumes:
        - name: model-cache
          persistentVolumeClaim:
            claimName: immich-model-cache-nfs
---
apiVersion: v1
kind: Service
metadata:
  name: immich-server
  namespace: immich
spec:
  selector:
    app: immich-server
  ports:
    - port: 2283
      targetPort: 2283
---
apiVersion: v1
kind: Service
metadata:
  name: immich-machine-learning
  namespace: immich
spec:
  selector:
    app: immich-machine-learning
  ports:
    - port: 3003
      targetPort: 3003
