k3s/immich/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich
  namespace: immich
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`immich.d-kline.org`)
      kind: Rule
      services:
        - name: immich-server
          port: 2283
      middlewares:
        - name: local-only
          namespace: traefik
        - name: security-headers
          namespace: traefik
  tls: {}
