k3s/immich/ml-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: immich-machine-learning
  namespace: immich
spec:
  endpointSelector:
    matchLabels:
      app: immich-machine-learning
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: immich
            app: immich-server
      toPorts:
        - ports:
            - port: "3003"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: dragonfly
            app: dragonfly
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
